--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "express-async-handler": "^1.2.0",
     "joi": "^17.13.3",
     "mongoose": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
